// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> Should render correctly 1`] = `
<div>
  <main
    class="page-container__container page-container__container--regular common-layout__grow"
  >
    <div>
      some text
    </div>
  </main>
  <footer
    class="footer__container"
    id="footer"
  >
    <div
      class="logo__container footer__logo logo__container--centred logo__container--no-padding"
    >
      <a
        href="/"
      >
        <h1
          aria-label="Home page"
          class="logo__heading logo__heading--no-padding"
          role="button"
        >
          LOGO
        </h1>
      </a>
    </div>
    <div
      class="footer__tech"
    >
      <div
        class="typography__main typography--no-padding tech-specs__container"
      >
        <span
          class="tech-specs__text"
        >
          Built in
        </span>
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        <span
          class="tech-specs__text"
        >
          and
        </span>
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        <span
          class="tech-specs__text"
        >
          Hosted on
        </span>
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </div>
    </div>
    <div
      class="footer-nav__container footer__nav"
    >
      <a
        class="text-link text-link--text-link text-link--no-padding text-link--light text-link--light--text-link text-link--inline footer-nav__link"
        href="/sitemap"
      >
        Site map
      </a>
      <a
        class="text-link text-link--text-link text-link--no-padding text-link--light text-link--light--text-link text-link--inline footer-nav__link"
        href="/status"
      >
        Status
      </a>
      <a
        class="text-link text-link--text-link text-link--no-padding text-link--light text-link--light--text-link text-link--inline footer-nav__link"
        href="/privacy-policy"
      >
        Privacy
      </a>
    </div>
  </footer>
</div>
`;

exports[`<Layout /> Should render correctly with spread props 1`] = `
<div>
  <main
    class="page-container__container page-container__container--prose common-layout__grow"
  >
    <div>
      some text
    </div>
  </main>
  <footer
    class="footer__container"
    id="footer"
  >
    <div
      class="logo__container footer__logo logo__container--centred logo__container--no-padding"
    >
      <a
        href="/"
      >
        <h1
          aria-label="Home page"
          class="logo__heading logo__heading--no-padding"
          role="button"
        >
          LOGO
        </h1>
      </a>
    </div>
    <div
      class="footer__tech"
    >
      <div
        class="typography__main typography--no-padding tech-specs__container"
      >
        <span
          class="tech-specs__text"
        >
          Built in
        </span>
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        <span
          class="tech-specs__text"
        >
          and
        </span>
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        <span
          class="tech-specs__text"
        >
          Hosted on
        </span>
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </div>
    </div>
    <div
      class="footer-nav__container footer__nav"
    >
      <a
        class="text-link text-link--text-link text-link--no-padding text-link--light text-link--light--text-link text-link--inline footer-nav__link"
        href="/sitemap"
      >
        Site map
      </a>
      <a
        class="text-link text-link--text-link text-link--no-padding text-link--light text-link--light--text-link text-link--inline footer-nav__link"
        href="/status"
      >
        Status
      </a>
      <a
        class="text-link text-link--text-link text-link--no-padding text-link--light text-link--light--text-link text-link--inline footer-nav__link"
        href="/privacy-policy"
      >
        Privacy
      </a>
    </div>
  </footer>
</div>
`;
